--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -102,6 +102,9 @@ $timeline: #666;
 
 	// UI Centre
 	.c h1{@extend %f_c_title;text-align: center}
+	.c .contact{text-align:center}
+	.c .contact a{display: inline-block;text-align: center;width: 20%;font-size: 0;}
+	.c .contact a img{display: block;width: 80%;margin: auto;}
 	.c svg{margin:20px auto}
 	//.avatar{display:block;margin:20px auto}
 
