--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -45,7 +45,7 @@ b, strong { font-weight: bold; }
 dfn { font-style: italic; }
 
 /** Address differences between Firefox and other browsers. */
-hr { -moz-box-sizing: content-box; box-sizing: content-box; height: 0; }
+hr { -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; height: 0; }
 
 /** Address styling not present in IE 8/9. */
 mark { background: #ff0; color: #000; }
@@ -103,7 +103,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] { -
 button[disabled], html input[disabled] { cursor: default; }
 
 /** 1. Address box sizing set to `content-box` in IE 8/9/10. 2. Remove excess padding in IE 8/9/10. */
-input[type="checkbox"], input[type="radio"] { box-sizing: border-box; /* 1 */ padding: 0; /* 2 */ }
+input[type="checkbox"], input[type="radio"] { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; /* 1 */ padding: 0; /* 2 */ }
 
 /** 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome. 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome (include `-moz` to future-proof). */
 input[type="search"] { -webkit-appearance: textfield; /* 1 */ -moz-box-sizing: content-box; -webkit-box-sizing: content-box; /* 2 */ box-sizing: content-box; }
@@ -131,9 +131,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 .tse-scrollbar { z-index: 99; position: absolute; top: 0; right: 0; bottom: 0; width: 11px; }
 
-.tse-scrollbar .drag-handle { position: absolute; right: 2px; -webkit-border-radius: 7px; -moz-border-radius: 7px; border-radius: 7px; min-height: 10px; width: 7px; opacity: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; -ms-transition: opacity 0.2s linear; transition: opacity 0.2s linear; background: #6c6e71; -webkit-background-clip: padding-box; -moz-background-clip: padding; }
+.tse-scrollbar .drag-handle { position: absolute; right: 2px; border-radius: 7px; min-height: 10px; width: 7px; opacity: 0; -webkit-transition: opacity 0.2s linear; transition: opacity 0.2s linear; background: #6c6e71; -webkit-background-clip: padding-box; -moz-background-clip: padding; }
 
-.tse-scrollbar:hover .drag-handle { /* When hovered, remove all transitions from drag handle */ opacity: 0.7; -webkit-transition: opacity 0 linear; -moz-transition: opacity 0 linear; -o-transition: opacity 0 linear; -ms-transition: opacity 0 linear; transition: opacity 0 linear; }
+.tse-scrollbar:hover .drag-handle { /* When hovered, remove all transitions from drag handle */ opacity: 0.7; -webkit-transition: opacity 0 linear; transition: opacity 0 linear; }
 
 .tse-scrollbar .drag-handle.visible { opacity: 0.7; }
 
@@ -171,9 +171,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 /* DEFAULTS
 ---------------------------------------*/
 @font-face { font-family: 'visitor'; src: url("visitor1.ttf") format("truetype"); }
-.disable_transitions * { transition: none !important; }
+.disable_transitions * { -webkit-transition: none !important; transition: none !important; }
 
-* { box-sizing: border-box; }
+* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 .cf:before, .cf:after { content: " "; display: table; }
 
@@ -189,9 +189,9 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 /* SCROLLBARS
 ---------------------------------------*/
-.scrollbar_measure { width: 50px; height: 50px; overflow: scroll; position: absolute; top: -200px; left: -200px; }
+#scrollbar_measure { width: 50px; height: 50px; overflow: scroll; position: absolute; top: -200px; left: -200px; }
 
-.scrollbar_measure div { height: 100%; width: 100%; }
+#scrollbar_measure div { height: 100%; width: 100%; }
 
 .scrollable_area_mask { overflow: hidden; }
 
@@ -209,9 +209,9 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .c { margin: auto; text-align: center; }
 
-.d { position: absolute; top: 0; bottom: 0; height: 100%; color: #eeeeee; transition: right 0.5s ease-in-out; }
+.d { position: absolute; top: 0; bottom: 0; height: 100%; color: #eeeeee; -webkit-transition: right 0.5s ease-in-out; transition: right 0.5s ease-in-out; }
 
-.w { position: absolute; top: 0; bottom: 0; height: 100%; color: #eeeeee; transition: left  0.5s ease-in-out; }
+.w { position: absolute; top: 0; bottom: 0; height: 100%; color: #eeeeee; -webkit-transition: left  0.5s ease-in-out; transition: left  0.5s ease-in-out; }
 
 .aside_button { width: 10%; position: absolute; top: 0; border: none; padding: 10px 0; margin: 0; z-index: 2; outline: 0; background: none; color: #eeeeee; text-transform: uppercase; text-align: center; }
 
@@ -233,13 +233,13 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .c .contact a img { display: block; width: 80%; margin: auto; }
 
-.c svg { margin: 20px auto; display: none; }
+.c svg { margin: 20px auto; }
 
 /* Zone W
 ---------------------------------------*/
 .project_list { list-style: none; margin: 0; padding: 10%; }
 
-.project_list:after { content: ''; position: absolute; top: 0; left: 50%; height: 100%; width: 3px; background: #666666; transform: translateX(-50%); z-index: 0; }
+.project_list:after { content: ''; position: absolute; top: 0; left: 50%; height: 100%; width: 3px; background: #666666; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); z-index: 0; }
 
 .project_link_wrapper { display: block; position: relative; padding: 0.3rem 0; }
 
@@ -249,7 +249,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .project_year_wrapper { display: block; position: relative; padding: 1rem 0; }
 
-.project_year { position: relative; float: left; margin-left: 50%; display: block; padding: 2px 4px; background: #333333; border: 2px solid #666666; font-size: 1.6rem; color: #666666; transform: translateX(-50%); z-index: 1; }
+.project_year { position: relative; float: left; margin-left: 50%; display: block; padding: 2px 4px; background: #333333; border: 2px solid #666666; font-size: 1.6rem; color: #666666; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); z-index: 1; }
 
 .project_link_wrapper:nth-of-type(odd) { padding-left: 45%; }
 
@@ -263,11 +263,11 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 /* PROJECT MODALS
 ---------------------------------------*/
-.project { position: fixed; top: 50%; left: 50%; width: 50%; max-width: 630px; min-width: 320px; height: auto; z-index: 2000; visibility: hidden; transform: translateX(-50%) translateY(-50%); backface-visibility: hidden; -webkit-backface-visibility: hidden; }
+.project { position: fixed; top: 50%; left: 50%; width: 50%; max-width: 630px; min-width: 320px; height: auto; z-index: 2000; visibility: hidden; -webkit-transform: translateX(-50%) translateY(-50%); -ms-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); -webkit-backface-visibility: hidden; -ms-backface-visibility: hidden; backface-visibility: hidden; -webkit-backface-visibility: hidden; }
 
-.overlay { position: fixed; width: 100%; height: 100%; top: 0; left: 0; visibility: hidden; z-index: 1000; opacity: 0; background: #333333; transition: all 0.3s; }
+.overlay { position: fixed; width: 100%; height: 100%; top: 0; left: 0; visibility: hidden; z-index: 1000; opacity: 0; background: #333333; -webkit-transition: all 0.3s; transition: all 0.3s; }
 
-.project_inner { color: #fff; position: relative; border-radius: 3px; margin: 0 auto; transform: scale(2); opacity: 0; transition: all 0.3s; }
+.project_inner { color: #fff; position: relative; border-radius: 3px; margin: 0 auto; -webkit-transform: scale(2); -ms-transform: scale(2); transform: scale(2); opacity: 0; -webkit-transition: all 0.3s; transition: all 0.3s; }
 
 .project_inner h1 { margin: 0; height: 4rem; line-height: 4rem; text-align: center; border-radius: 3px 3px 0 0; }
 
@@ -295,7 +295,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .project_show { visibility: visible; }
 
-.project_show .project_inner { transform: scale(1); opacity: 1; }
+.project_show .project_inner { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; }
 
 .project_show ~ .overlay { opacity: 0.7; visibility: visible; }
 
@@ -455,14 +455,17 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
   .w { width: 90%; left: 90%; background: #333333; }
   .d.aside_open { right: 10%; border-right: 1px solid #000; }
   .w.aside_open { left: 10%; border-left: 1px solid #000; }
-  .w .project_list { opacity: 0; transition: opacity 0.5s ease-in-out; }
+  .w .project_list { opacity: 0; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; }
   .w.aside_open .project_list { opacity: 1; }
   .project_list { padding: 5% 11% 5% 11%; }
+  #responsive_state { display: none; }
+  /* PROJECT IMAGE ---------------------------------------*/
   .project_inner .project_image { display: none; } }
 @media screen and (min-width: 856px) { .c { width: 20%; padding: 0 30px; }
   .d { width: 40%; right: 60%; background: #333333; }
   .w { width: 40%; left: 60%; background: #333333; }
   .aside_button { cursor: default; }
+  #responsive_state { display: block; }
   /* PROJECT IMAGE ---------------------------------------*/
   .project_inner .project_image { background: url(../images/sprite_captures.jpg) no-repeat; }
   #project_bstv .project_image { display: none; }
