--- a/dev/index.jade
+++ b/dev/index.jade
@@ -40,8 +40,10 @@ body.disable_transitions
 
 	div.overlay
 
-	div.scrollbar_measure
+	div#scrollbar_measure
 		div
 
+	div#responsive_state
+
 	script(src="js/lib/jquery.js")
-	script(src="js/main.js")
+	script(src="js/main.js", inline="true")
