--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -187,7 +187,8 @@ body { background: #eeeeee; height: 100%; }
 
 a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition: color .3s ease-in-out; }
 
-/* SCROLLBARS
+/* SCROLLBARS TWEAKS
+/* See https://github.com/Yojimb0/Yojimbo_2014
 ---------------------------------------*/
 #scrollbar_measure { width: 50px; height: 50px; overflow: scroll; position: absolute; top: -200px; left: -200px; }
 
@@ -203,7 +204,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .project_inner .scrollable_area { max-height: 80%; }
 
-/* General Layout
+/* Main layout
 ---------------------------------------*/
 .page { position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: auto; overflow: hidden; }
 
@@ -212,18 +213,6 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 .d { position: absolute; top: 0; bottom: 0; height: 100%; color: #eeeeee; -webkit-transition: right 0.5s ease-in-out; transition: right 0.5s ease-in-out; }
 
 .w { position: absolute; top: 0; bottom: 0; height: 100%; color: #eeeeee; -webkit-transition: left  0.5s ease-in-out; transition: left  0.5s ease-in-out; }
-
-.aside_button { width: 10%; position: absolute; top: 0; border: none; padding: 10px 0; margin: 0; z-index: 2; outline: 0; background: none; color: #eeeeee; text-transform: uppercase; text-align: center; }
-
-.aside_button span { display: block; height: 2.6rem; }
-
-.d .aside_button { right: 0; }
-
-.d .d_content { padding: 10%; }
-
-.d p strong { color: #fff; }
-
-.w .aside_button { left: 0; }
 
 .c h1 { text-align: center; }
 
@@ -235,8 +224,24 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .c svg { margin: 20px auto; }
 
-/* Zone W
+/* Both <aside>
 ---------------------------------------*/
+.aside_button { width: 10%; position: absolute; top: 0; border: none; padding: 10px 0; margin: 0; z-index: 2; outline: 0; background: none; color: #eeeeee; text-transform: uppercase; text-align: center; }
+
+.aside_button span { display: block; height: 2.6rem; }
+
+/* <aside> .d (Details)
+---------------------------------------*/
+.d .aside_button { right: 0; }
+
+.d .d_content { padding: 10%; }
+
+.d p strong { color: white; }
+
+/* <aside> .w (Work)
+---------------------------------------*/
+.w .aside_button { left: 0; }
+
 .project_list { list-style: none; margin: 0; padding: 10%; }
 
 .project_list:after { content: ''; position: absolute; top: 0; left: 50%; height: 100%; width: 3px; background: #666666; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); z-index: 0; }
@@ -265,15 +270,13 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 ---------------------------------------*/
 .project { position: fixed; top: 50%; left: 50%; width: 50%; max-width: 630px; min-width: 320px; height: auto; z-index: 2000; visibility: hidden; -webkit-transform: translateX(-50%) translateY(-50%); -ms-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); -webkit-backface-visibility: hidden; -ms-backface-visibility: hidden; backface-visibility: hidden; -webkit-backface-visibility: hidden; }
 
-.overlay { position: fixed; width: 100%; height: 100%; top: 0; left: 0; visibility: hidden; z-index: 1000; opacity: 0; background: #333333; -webkit-transition: all 0.3s; transition: all 0.3s; }
-
-.project_inner { color: #fff; position: relative; border-radius: 3px; margin: 0 auto; -webkit-transform: scale(2); -ms-transform: scale(2); transform: scale(2); opacity: 0; -webkit-transition: all 0.3s; transition: all 0.3s; }
+.project_inner { color: white; position: relative; border-radius: 3px; margin: 0 auto; -webkit-transform: scale(2); -ms-transform: scale(2); transform: scale(2); opacity: 0; -webkit-transition: all 0.3s; transition: all 0.3s; }
 
 .project_inner h1 { margin: 0; height: 4rem; line-height: 4rem; text-align: center; border-radius: 3px 3px 0 0; }
 
-.project_inner h2 { margin: 0; background: #fff; color: #ddd; padding: 2px 8px; }
+.project_inner h2 { margin: 0; background: white; color: #ddd; padding: 2px 8px; }
 
-.project_inner .project_image { width: 400px; height: 140px; background: #aaa; margin: 10px auto 0; }
+.project_inner .project_image { width: 400px; height: 140px; background: #aaaaaa; margin: 10px auto 0; }
 
 .project_inner table { width: 100%; margin: 10px 0; }
 
@@ -281,7 +284,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .project_details p { margin: 7px 8px 0; }
 
-.project_tech span { display: inline-block; padding: 2px 4px; margin: 4px 4px 0 0; border: 2px solid #fff; }
+.project_tech span { display: inline-block; padding: 2px 4px; margin: 4px 4px 0 0; border: 2px solid white; }
 
 .project_achievements { padding: 0 4px 10px; }
 
@@ -289,7 +292,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .project_buttons { text-align: center; }
 
-.project_buttons a { display: inline-block; padding: 8px 0px; background: #fff; color: #ddd; width: 30%; margin: 0 0 20px; font-weight: bold; cursor: pointer; }
+.project_buttons a { display: inline-block; padding: 8px 0px; background: white; color: #ddd; width: 30%; margin: 0 0 20px; font-weight: bold; cursor: pointer; }
 
 .project_buttons .project_view { margin-right: 5px; }
 
@@ -298,6 +301,8 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 .project_show .project_inner { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; }
 
 .project_show ~ .overlay { opacity: 0.7; visibility: visible; }
+
+.overlay { position: fixed; width: 100%; height: 100%; top: 0; left: 0; visibility: hidden; z-index: 1000; opacity: 0; background: #333333; -webkit-transition: all 0.3s; transition: all 0.3s; }
 
 /* COLOR LOOP
 ---------------------------------------*/
@@ -343,6 +348,13 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 #project_mgd2 .project_inner h2 { background: #00b6e2; color: #007896; }
 #project_mgd2.project_show ~ .overlay { background: #003b49; }
 
+.project_link_bstv { background: #b9006e; }
+
+#project_bstv .project_inner { background: #86004f; }
+#project_bstv .project_inner h1, #project_bstv .project_view, #project_bstv .project_close { background: #b9006e; color: #ff86ce; }
+#project_bstv .project_inner h2 { background: #ec008c; color: #a0005f; }
+#project_bstv.project_show ~ .overlay { background: #530031; }
+
 .project_link_lcac { background: #4c4079; }
 
 #project_lcac .project_inner { background: #372f57; }
@@ -363,6 +375,13 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 #project_appw .project_inner h1, #project_appw .project_view, #project_appw .project_close { background: #7aa329; color: #d6ebad; }
 #project_appw .project_inner h2 { background: #99cc33; color: #6b8f24; }
 #project_appw.project_show ~ .overlay { background: #3d5214; }
+
+.project_link_kidk { background: #7aa329; }
+
+#project_kidk .project_inner { background: #5c7a1f; }
+#project_kidk .project_inner h1, #project_kidk .project_view, #project_kidk .project_close { background: #7aa329; color: #d6ebad; }
+#project_kidk .project_inner h2 { background: #99cc33; color: #6b8f24; }
+#project_kidk.project_show ~ .overlay { background: #3d5214; }
 
 .project_link_m6b1 { background: #d00212; }
 
@@ -455,18 +474,16 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
   .w { width: 90%; left: 90%; background: #333333; }
   .d.aside_open { right: 10%; border-right: 1px solid #000; }
   .w.aside_open { left: 10%; border-left: 1px solid #000; }
-  .w .project_list { opacity: 0; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; }
+  .w .project_list, .d .d_content { opacity: 0; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; }
   .w.aside_open .project_list { opacity: 1; }
   .project_list { padding: 5% 11% 5% 11%; }
   #responsive_state { display: none; }
-  /* PROJECT IMAGE ---------------------------------------*/
   .project_inner .project_image { display: none; } }
 @media screen and (min-width: 856px) { .c { width: 20%; padding: 0 30px; }
   .d { width: 40%; right: 60%; background: #333333; }
   .w { width: 40%; left: 60%; background: #333333; }
   .aside_button { cursor: default; }
   #responsive_state { display: block; }
-  /* PROJECT IMAGE ---------------------------------------*/
   .project_inner .project_image { background: url(../images/sprite_captures.jpg) no-repeat; }
   #project_bstv .project_image { display: none; }
   #project_yj13 .project_image { background-position: 0 -2800px; }
