--- a/dev/index.jade
+++ b/dev/index.jade
@@ -45,5 +45,5 @@ body.disable_transitions
 
 	div#responsive_state
 
-	script(src="js/lib/jquery.js")
+	script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
 	script(src="js/main.js", inline="true")
