--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -121,35 +121,6 @@ textarea { overflow: auto; /* 1 */ vertical-align: top; /* 2 */ }
 /** Remove most spacing between table cells. */
 table { border-collapse: collapse; border-spacing: 0; }
 
-/** TrackpadScrollEmulator Version: 1.0.1 Author: Jonathan Nicol @f6design https://github.com/jnicol/trackpad-scroll-emulator */
-.tse-scrollable { position: relative; width: 100%; /* Default value. Overwite this if you want. */ height: 100%; /* Default value. Overwite this if you want. */ overflow: hidden; }
-
-.tse-scrollable .tse-scroll-content { overflow: hidden; overflow-y: scroll; }
-
-/* No longer using ::scrollbar too, since it breaks Chrome 25 */
-.tse-scrollable .tse-scroll-content::-webkit-scrollbar { width: 0; height: 0; }
-
-.tse-scrollbar { z-index: 99; position: absolute; top: 0; right: 0; bottom: 0; width: 11px; }
-
-.tse-scrollbar .drag-handle { position: absolute; right: 2px; border-radius: 7px; min-height: 10px; width: 7px; opacity: 0; -webkit-transition: opacity 0.2s linear; transition: opacity 0.2s linear; background: #6c6e71; -webkit-background-clip: padding-box; -moz-background-clip: padding; }
-
-.tse-scrollbar:hover .drag-handle { /* When hovered, remove all transitions from drag handle */ opacity: 0.7; -webkit-transition: opacity 0 linear; transition: opacity 0 linear; }
-
-.tse-scrollbar .drag-handle.visible { opacity: 0.7; }
-
-/* Used when testing the scrollbar width */
-/* No longer using ::scrollbar too, since it breaks Chrome 25 */
-.scrollbar-width-tester::-webkit-scrollbar { width: 0; height: 0; }
-
-/* Horizontal scroller */
-.tse-scrollable.horizontal .tse-scroll-content { overflow-x: scroll; overflow-y: hidden; }
-
-.tse-scrollable.horizontal .tse-scroll-content::-webkit-scrollbar, .tse-scrollable.horizontal .tse-scroll-content::scrollbar { width: auto; height: 0; }
-
-.tse-scrollable.horizontal .tse-scrollbar { top: auto; left: 0; width: auto; height: 11px; }
-
-.tse-scrollable.horizontal .tse-scrollbar .drag-handle { right: auto; top: 2px; height: 7px; min-height: 0; min-width: 10px; width: auto; }
-
 .c h1 { font-family: 'Josefin Sans', sans-serif; font-size: 3rem; font-weight: 100; }
 
 .d h2 { font-family: 'Josefin Sans', sans-serif; font-size: 2rem; font-weight: 100; }
@@ -170,7 +141,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* DEFAULTS
 ---------------------------------------*/
-@font-face { font-family: 'visitor'; src: url("visitor1.ttf") format("truetype"); }
+@font-face { font-family: 'visitor'; src: url(/css/visitor1.ttf) format("truetype"); }
+@font-face { font-family: 'Josefin Sans'; font-style: normal; font-weight: 400; src: local("Josefin Sans"), local("JosefinSans"), url(http://themes.googleusercontent.com/static/fonts/josefinsans/v4/xgzbb53t8j-Mo-vYa23n5qRDOzjiPcYnFooOUGCOsRk.woff) format("woff"); }
+@font-face { font-family: 'Josefin Sans'; font-style: normal; font-weight: 700; src: local("Josefin Sans Bold"), local("JosefinSans-Bold"), url(http://themes.googleusercontent.com/static/fonts/josefinsans/v4/C6HYlRF50SGJq1XyXj04zxAPw1J91axKNXP_-QX9CC8.woff) format("woff"); }
 .disable_transitions * { -webkit-transition: none !important; transition: none !important; }
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
@@ -220,7 +193,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
 
 .c .contact a { display: inline-block; text-align: center; width: 20%; font-size: 0; }
 
-.c .contact a img { display: block; width: 80%; margin: auto; }
+.c .contact a img { display: block; width: 80%; margin: auto; height: auto; }
 
 .c svg { margin: 20px auto; }
 
@@ -475,7 +448,7 @@ a { text-decoration: none; -webkit-transition: color .3s ease-in-out; transition
   .d.aside_open { right: 10%; border-right: 1px solid #000; }
   .w.aside_open { left: 10%; border-left: 1px solid #000; }
   .w .project_list, .d .d_content { opacity: 0; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; }
-  .w.aside_open .project_list { opacity: 1; }
+  .d.aside_open .d_content, .w.aside_open .project_list { opacity: 1; }
   .project_list { padding: 5% 11% 5% 11%; }
   #responsive_state { display: none; }
   .project_inner .project_image { display: none; } }
